<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Fermi Calendar</string>

    <string name="email_prompt">School email</string>
    <string name="password_prompt" translatable="false">Password</string>
    <string name="name_prompt">Name</string>
    <string name="class_prompt">Class</string>

    <string name="login_prompt" translatable="false">Login</string>
    <string name="register_prompt">Register</string>

    <string name="signIn_prompt">Already have an Account?</string>
    <string name="signUp_prompt">Don\'t have an Account?</string>

    <string name="calendarError">Failed to retrieve events</string>
    <string name="formError">Complete the form!</string>
    <string name="authError">Authentication error!</string>
    <string name="emailError">Failed to send verification email</string>
    <string name="emailDomainError">Invalid email domain</string>
    <string name="emailInfo">Verification email sent to </string>
    <string name="calendarAppError">No calendar app found</string>

    <string name="fermiDomain" translatable="false">fermimn.edu.it</string>
    <string name="serverURL" translatable="false">https://endpoint-fyi7.onrender.com</string>
    <string name="fermiCalendarID" translatable="false">isfermimantova@gmail.com</string>
    <string name="googleCalendarApiKey" translatable="false">AIzaSyDOtGM5jr8bNp1utVpG2_gSRH03RNGBkI8</string>
    <string name="fermi_calendar" >Daily variations</string>
    <string name="select_date">Select date</string>
    <string name="home" translatable="false">Home</string>
    <string name="search">Search</string>
    <string name="search_text">Search text</string>
    <string name="no_events">No events found</string>
    <string name="class_string">Class</string>
    <string name="more">more</string>
    <string name="dialogTitle">Add to calendar?</string>
    <string name="dialogMessage">Do you want to add this event to your calendar app?\n</string>
    <string name="dialogCancel">Cancel</string>
    <string name="noClass">None</string>
</resources>